<resources>
    <string name="app_name">Pokemon rocket</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="share_success_text">Welcome to play Pokemon rocket</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="about">About</string>
    <string name="about_content"> \t\t\tItem space is easily one of the most confusing and frustrating aspects of the game. Having a finite number of items you can carry at any given time means decisions will need to be made from time to time based on what your personal focus is in game. We can all easily remember tossing out unwanted Potions only to regret it a couple battles later. So let’s take a look at optimizing the space we have.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon_rocket">Pokemon rocket</string>
    <string name="inventory">Inventory</string>
    <string name="pokemon_list">Pokemon List</string>
    <string name="add_pokemon">Add Pokemon</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="edit_pokemon">Edit Pokemon</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="power">Power</string>
    <string name="save">save</string>

    <string name="insert_message">Insert success pokemon</string>
    <string name="cleared_message">Clear all pokemon</string>

    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>HERE IS YOUR SLEEP DATA</h3>]]></string>
    <string name="name_lebel"><![CDATA[<b>Pokemon: </b>]]></string>
    <string name="type_lebel"><![CDATA[<b>Type:</b>]]></string>
    <string name="power_lebel"><![CDATA[<b>Power:</b>]]></string>
    <string name="title_pokemon">title_pokemon</string>
    <string name="name_pokemon"><b>Pokemon Name : </b> %s</string>
    <string name="type_power"><b>Type : </b> %s   <b>Power : </b> %d</string>

    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="update_message">Edit pokemon success</string>
    <string name="delete_message">Delete pokemon success!!</string>
    <string name="delete">Delete</string>
    <string name="title_rocket">title_rocket</string>
    <string name="title_addpokemon">title_addpokemon</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
</resources>
