<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="homeViewModel"
            type="com.example.pokemonrocket.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <Button
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_inventory"
            android:fontFamily="@font/roboto"
            android:onClick="@{()-> homeViewModel.onClickInventory()}"
            android:text="@string/inventory"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/title_pokemon"
            android:layout_width="282dp"
            android:layout_height="115dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/title_pokemon"
            android:src="@drawable/pokemon_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="352dp"
            android:layout_height="56dp"
            android:layout_marginTop="72dp"
            android:contentDescription="@string/title_rocket"
            android:src="@drawable/pokemon_rocket2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_pokemon" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </layout>